--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  background: radial-gradient(at 50% 50%, #873740 0%, #272730 40%, #171720 80%, #070710 100%);
+  background: radial-gradient(at 50% 50%, #0459FD 0%, #274396 40%, #171720 80%, #070710 100%);
 }
 
 .App-link {
